hphp/test/zend/good/error_003.php.exp
HipHop Fatal error: A cannot use abc - it is not a trait in hphp/test/zend/good/error_003.php on line 6
